# model-service

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  tag-pre-release.sh
.github/workflows/: build-and-push-prereleases.yml  build-and-push.yml  docker_publish.yml
src/: app.py
